[gd_scene load_steps=6 format=2]

[ext_resource path="res://Interactables/InteractZone.gd" type="Script" id=1]
[ext_resource path="res://Assets/Theme/PressStart2P-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 0, 0, 0.266667 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
corner_detail = 2
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0
anti_aliasing = false

[node name="InteractZone" type="Area2D"]
collision_layer = 0
collision_mask = 4
monitorable = false
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="InteractInput" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -24.0
margin_right = 20.0
margin_bottom = -16.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "Input"
align = 1

[node name="Panel" type="Panel" parent="InteractInput"]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_styles/panel = SubResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_InteractZone_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_InteractZone_body_exited"]
